Restyle index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       testWarehouse(Warehouse)
     </script>
   </head>
-  <body>
+  <body style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
     <h2>Willkommen im Warehouse</h2>
-    <div style="font-style: italic;">In dieser Aufgabe bauen wir eine Klasse 'Warehouse'. Hier sieht ihr die Tests, die pro Aufgabe erfüllt werden müssen. Habt ihr alle Tests für eine Aufgabe erfüllt, werden die Tests für die nächste Aufgabe angezeigt.</div>
+    <p style="font-style: italic;">In dieser Aufgabe bauen wir eine Klasse 'Warehouse'. Hier sieht ihr die Tests, die pro Aufgabe erfüllt werden müssen. Habt ihr alle Tests für eine Aufgabe erfüllt, werden die Tests für die nächste Aufgabe angezeigt.</p>
   </body>
 </html>
