Wording and styling of index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
     <h2>Willkommen im Warehouse</h2>
-    <p style="font-style: italic;">In dieser Aufgabe bauen wir eine Klasse 'Warehouse'. Hier sieht ihr die Tests, die pro Aufgabe erfüllt werden müssen. Habt ihr alle Tests für eine Aufgabe erfüllt, werden die Tests für die nächste Aufgabe angezeigt.</p>
+    <p style="font-style: italic;">In dieser Aufgabe bauen wir eine Klasse 'Warehouse'. Die Klasse soll verschiedene Items in bestimmten Mengen einlagern können.<br> Hier sieht ihr die Tests, die pro Aufgabe erfüllt werden müssen. Habt ihr alle Tests für eine Aufgabe erfüllt, werden die Tests für die nächste Aufgabe angezeigt.</p>
   </body>
 </html>
